# marketplace

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2026-04-29__01-16_initial_migration.py  2026-05-01__00-29_initial_migration.py  dae4d74f46be_initial_migration.py
app/controllers/: sku_controller.py
app/database/: config.py  connection.py
app/dependencies/: session_generator.py
app/exceptions/: http_exceptions.py
app/models/: __init__.py  base.py  product.py  sku.py  stock_enum.py
app/pydantic_schemas/responses/: get_item_info.py
config/: database.py
tests/fixtures/: model_objects_fabrics.py
tests/sku_controller_tests/: test_get_item_info.py
