[project]
name = "marketplace"
version = "0.1.0"
description = "Marketplace API"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.135.3",
    "starlette==1.0.0",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.49",
    "uvicorn==0.44.0",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
